kubernetes/apps/weather-map/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-map-frontend
  namespace: weather-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-map-frontend
  template:
    metadata:
      labels:
        app: weather-map-frontend
    spec:
      containers:
        - name: frontend
          image: 208107894265.dkr.ecr.ap-southeast-1.amazonaws.com/weather-map-frontend:prod-20260326-140706
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
