kubernetes/apps/weather-map/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-map-frontend
  namespace: weather-map
spec:
  selector:
    app: weather-map-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
